# Parallel-programming-labs

./: .gitignore  CMakeLists.txt  Readme.md  build-release.bat  build-release.sh  build.bat  build.sh
app_a/: CMakeLists.txt
app_a/include/: BmpProcessor.hpp
app_a/src/: BmpProcessor.cpp  main.cpp
app_b/: CMakeLists.txt
app_b/include/: BmpProcessor.hpp
app_b/src/: BmpProcessor.cpp  main.cpp
app_c/: CMakeLists.txt
app_c/include/: BmpProcessor.hpp  CsvProcessor.hpp
app_c/src/: BmpProcessor.cpp  CsvProcessor.cpp  main.cpp
